# metashape-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  WORKFLOW_GUIDE.md  api_reference.txt  pyproject.toml
.claude-plugin/: plugin.json
agents/: alignment-doctor.md  gcp-advisor.md  handoff-coordinator.md  metashape-api-verifier.md  photogrammetry-qa.md  project-planner.md  terrain-processor.md  texture-advisor.md
docs/plans/: 2026-02-20-metashape-mcp-implementation.md  2026-02-20-metashape-mcp-server-design.md  2026-02-22-corridor-drift-detection-design.md  2026-02-22-subagent-team-design.md  2026-02-22-subagent-team-implementation.md
hooks/: hooks.json
hooks/scripts/: block-psx-edit.sh  block-reference-edit.sh  post-qa-reminder.sh  preflight-estimate.sh
scripts/: center_road_obj.py  dem_to_obj.py  start_mcp_headless.py  start_mcp_server.py  usgs_dem_to_colored_las.py
skills/batch-export/: SKILL.md
skills/corridor-alignment-pipeline/: SKILL.md
skills/diagnose-alignment/: SKILL.md
skills/mcp-tool-scaffolding/: SKILL.md
skills/metashape-api-lookup/: SKILL.md
skills/metashape-reconstruction/: SKILL.md
skills/photo-import-setup/: SKILL.md
skills/quality-settings/: SKILL.md
skills/sky-artifact-prevention/: SKILL.md
skills/texturing-pipeline/: SKILL.md
skills/tile-export-pipeline/: SKILL.md
skills/usgs-lidar-dem/: SKILL.md
src/metashape_mcp/: __init__.py  discovery.py  multiplexer.py  proxy.py  server.py
src/metashape_mcp/prompts/: __init__.py  troubleshooting.py  workflows.py
src/metashape_mcp/resources/: __init__.py  (+3 more)
(+21 files in other folders)
