[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metashape-mcp"
version = "0.3.0"
description = "MCP server for Agisoft Metashape Professional 2.3+"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
metashape-mcp = "metashape_mcp.proxy:main"

[project.urls]
Homepage = "https://github.com/jenkinsm13/metashape-mcp"
Repository = "https://github.com/jenkinsm13/metashape-mcp"
Issues = "https://github.com/jenkinsm13/metashape-mcp/issues"
